Fix right side extra spacing glitch on tab and mobile screen

--- a/assets/css/custom-slider.css
+++ b/assets/css/custom-slider.css
@@ -22,7 +22,7 @@
   max-width: 100vw;
   height: 600px;
   position: relative;
-  perspective: 2000px;
+  perspective: 100vw;
   margin-top: 60px;
   z-index: 2;
 }
